@@ -6,9 +6,13 @@ import com.mannschaft.app.common.SecurityUtils;
 import com.mannschaft.app.shiftbudget.ShiftBudgetConsumptionStatus;
 import com.mannschaft.app.shiftbudget.ShiftBudgetErrorCode;
 import com.mannschaft.app.shiftbudget.ShiftBudgetFeatureService;
+import com.mannschaft.app.shiftbudget.dto.AlertResponse;
 import com.mannschaft.app.shiftbudget.dto.ConsumptionSummaryResponse;
+import com.mannschaft.app.shiftbudget.dto.UserConsumptionDto;
+import com.mannschaft.app.shiftbudget.entity.BudgetThresholdAlertEntity;
 import com.mannschaft.app.shiftbudget.entity.ShiftBudgetAllocationEntity;
 import com.mannschaft.app.shiftbudget.entity.ShiftBudgetConsumptionEntity;
+import com.mannschaft.app.shiftbudget.repository.BudgetThresholdAlertRepository;
 import com.mannschaft.app.shiftbudget.repository.ShiftBudgetAllocationRepository;
 import com.mannschaft.app.shiftbudget.repository.ShiftBudgetConsumptionRepository;
 import com.mannschaft.app.shiftbudget.repository.TodoBudgetLinkRepository;
@@ -20,18 +24,30 @@ import org.springframework.transaction.annotation.Transactional;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
 
 /**
- * F08.7 シフト予算消化サマリ サービス（API #5 / Phase 9-β）。
+ * F08.7 シフト予算消化サマリ サービス（API #5 / Phase 9-δ 第3段で正規化完了）。
  *
  * <p>設計書 F08.7 (v1.2) §6.2.3 / §9.3 に準拠。</p>
  *
- * <p><strong>マスター御裁可 Q2</strong>: Phase 9-β 中、{@code by_user} は
- * 常に空配列 + {@code flags=["BY_USER_HIDDEN"]} を返却する（クリーンカット精神）。
- * 9-δ で BUDGET_ADMIN クリーンカット移行時に正規化（権限ありなら個人別内訳を返す）する。</p>
+ * <p><strong>権限による表示切替（Phase 9-δ 第3段で正規化）</strong>:</p>
+ * <ul>
+ *   <li>{@code BUDGET_ADMIN} 保有時: {@code by_user} に user_id 別の実集計を返却 +
+ *       {@code flags} は空配列 + {@code alerts} は実集計</li>
+ *   <li>{@code BUDGET_VIEW} のみ: {@code by_user} は空配列 +
+ *       {@code flags=["BY_USER_HIDDEN"]} + {@code alerts} は実集計</li>
+ *   <li>BUDGET_VIEW も無し: {@link ShiftBudgetErrorCode#BUDGET_VIEW_REQUIRED} (403)</li>
+ * </ul>
  *
- * <p>{@code alerts} は警告機能 (9-δ) 未実装のため常に空配列。</p>
+ * <p>{@code by_user} の集計対象は status が {@link ShiftBudgetConsumptionStatus#PLANNED} か
+ * {@link ShiftBudgetConsumptionStatus#CONFIRMED} の生存レコードのみ
+ * （{@link ShiftBudgetConsumptionStatus#CANCELLED} は除外、設計書 §5.3 物理削除禁止運用）。</p>
+ *
+ * <p>{@code alerts} は組織配下の警告のうち、当該 allocation に紐付く全件
+ * （承認済 / 未承認問わず）を {@code triggered_at DESC} で返却する。</p>
  */
 @Slf4j
 @Service
@@ -39,7 +55,7 @@ import java.util.List;
 @Transactional(readOnly = true)
 public class ShiftBudgetSummaryService {
 
-    /** Phase 9-β で常に flags に追加される識別子 */
+    /** {@code BUDGET_VIEW} のみで {@code by_user} を伏せる際の flags 識別子 */
     public static final String FLAG_BY_USER_HIDDEN = "BY_USER_HIDDEN";
 
     /** 消化率の小数桁数（0.8167 のように 4 桁） */
@@ -48,17 +64,19 @@ public class ShiftBudgetSummaryService {
     private final ShiftBudgetAllocationRepository allocationRepository;
     private final ShiftBudgetConsumptionRepository consumptionRepository;
     private final TodoBudgetLinkRepository todoBudgetLinkRepository;
+    private final BudgetThresholdAlertRepository alertRepository;
     private final ShiftBudgetFeatureService featureService;
     private final AccessControlService accessControlService;
 
     /**
      * 指定 allocation の消化サマリを返す。
      *
-     * <p>権限: {@code BUDGET_VIEW}</p>
+     * <p>権限: {@code BUDGET_VIEW} 必須（無いと 403）。
+     * {@code BUDGET_ADMIN} 保有時のみ {@code by_user} の実データを返す。</p>
      */
     public ConsumptionSummaryResponse getConsumptionSummary(Long organizationId, Long allocationId) {
         featureService.requireEnabled(organizationId);
-        requireBudgetView(organizationId);
+        boolean budgetAdmin = requireBudgetViewAndDetectAdmin(organizationId);
 
         ShiftBudgetAllocationEntity allocation = allocationRepository
                 .findByIdAndOrganizationIdAndDeletedAtIsNull(allocationId, organizationId)
@@ -74,12 +92,25 @@ public class ShiftBudgetSummaryService {
         BigDecimal rate = calculateConsumptionRate(allocated, consumed);
         String status = determineStatus(rate);
 
-        // by_user は Q2 御裁可により Phase 9-β 中は常に空配列
-        // flags は常に BY_USER_HIDDEN を含める（v1.2 形状確定ルール）
-        List<String> flags = List.of(FLAG_BY_USER_HIDDEN);
+        // 永続化済 entity の id を優先し、未設定なら呼出パラメータの allocationId を使う（テスト容易性）
+        Long resolvedId = allocation.getId() != null ? allocation.getId() : allocationId;
+
+        // alerts は権限によらず実集計（個人別時給は含まないため漏洩リスクなし）
+        List<AlertResponse> alerts = aggregateAlerts(resolvedId);
+
+        // by_user は BUDGET_ADMIN 保有時のみ実集計、それ以外は空配列 + flags=["BY_USER_HIDDEN"]
+        List<UserConsumptionDto> byUser;
+        List<String> flags;
+        if (budgetAdmin) {
+            byUser = aggregateByUser(resolvedId);
+            flags = Collections.emptyList();
+        } else {
+            byUser = Collections.emptyList();
+            flags = List.of(FLAG_BY_USER_HIDDEN);
+        }
 
         return ConsumptionSummaryResponse.builder()
-                .allocationId(allocation.getId())
+                .allocationId(resolvedId)
                 .allocatedAmount(allocated)
                 .consumedAmount(consumed)
                 .confirmedAmount(confirmed)
@@ -88,9 +119,54 @@ public class ShiftBudgetSummaryService {
                 .consumptionRate(rate)
                 .status(status)
                 .flags(flags)
-                .alerts(Collections.emptyList())  // 9-δ まで常に空配列
-                .byUser(Collections.emptyList())  // Q2 御裁可: 常に空配列
+                .alerts(alerts)
+                .byUser(byUser)
                 .build();
+    }
+
+    /**
+     * user_id 別の消化額・勤務時間集計を返す（{@code BUDGET_ADMIN} 保有時のみ呼ばれる）。
+     *
+     * <p>集計対象: {@code allocation_id} 配下の status PLANNED/CONFIRMED かつ生存レコード。
+     * group by user_id、SUM(amount) と SUM(hours) を採る。</p>
+     *
+     * <p>並び順は user_id 昇順（決定論的、テスト容易性向上）。</p>
+     */
+    private List<UserConsumptionDto> aggregateByUser(Long allocationId) {
+        List<ShiftBudgetConsumptionEntity> consumptions = consumptionRepository
+                .findByAllocationIdAndStatusInAndDeletedAtIsNull(
+                        allocationId,
+                        List.of(ShiftBudgetConsumptionStatus.PLANNED,
+                                ShiftBudgetConsumptionStatus.CONFIRMED));
+
+        // user_id 昇順を維持するため LinkedHashMap + ソート済 List で構築
+        Map<Long, BigDecimal[]> grouped = new LinkedHashMap<>();
+        consumptions.stream()
+                .sorted((a, b) -> Long.compare(a.getUserId(), b.getUserId()))
+                .forEach(c -> {
+                    BigDecimal[] sums = grouped.computeIfAbsent(
+                            c.getUserId(), k -> new BigDecimal[]{BigDecimal.ZERO, BigDecimal.ZERO});
+                    sums[0] = sums[0].add(c.getAmount());
+                    sums[1] = sums[1].add(c.getHours());
+                });
+
+        return grouped.entrySet().stream()
+                .map(e -> UserConsumptionDto.builder()
+                        .userId(e.getKey())
+                        .amount(e.getValue()[0])
+                        .hours(e.getValue()[1])
+                        .build())
+                .toList();
+    }
+
+    /**
+     * 当該 allocation に紐付く警告全件を {@code triggered_at DESC} で返す。
+     *
+     * <p>承認済 / 未承認の両方を含める（消化サマリ表示では時系列で全履歴を見せる）。</p>
+     */
+    private List<AlertResponse> aggregateAlerts(Long allocationId) {
+        List<BudgetThresholdAlertEntity> alerts = alertRepository.findByAllocationIdOrderByTriggeredAtDesc(allocationId);
+        return alerts.stream().map(AlertResponse::from).toList();
     }
 
     /**
@@ -128,18 +204,6 @@ public class ShiftBudgetSummaryService {
     }
 
     /**
-     * テスト容易性 / 9-δ 移行のための内部ヘルパー（package-private）。
-     * 現状未使用だが、9-δ で BUDGET_ADMIN クリーンカット時に
-     * {@code by_user} 集計を再活性化する際の起点。
-     */
-    @SuppressWarnings("unused")
-    List<ShiftBudgetConsumptionEntity> findAliveConsumptionsForFutureUse(Long allocationId) {
-        return consumptionRepository.findByAllocationIdAndStatusInAndDeletedAtIsNull(
-                allocationId, List.of(ShiftBudgetConsumptionStatus.PLANNED,
-                        ShiftBudgetConsumptionStatus.CONFIRMED));
-    }
-
-    /**
      * プロジェクト消化額（直接経路 + TODO 経由）の合計を返す（Phase 9-γ 追加）。
      *
      * <p>設計書 §4.3 に厳密準拠:</p>
@@ -161,7 +225,7 @@ public class ShiftBudgetSummaryService {
      */
     public BigDecimal getProjectConsumedAmount(Long organizationId, Long projectId) {
         featureService.requireEnabled(organizationId);
-        requireBudgetView(organizationId);
+        requireBudgetViewAndDetectAdmin(organizationId);
 
         BigDecimal direct = todoBudgetLinkRepository.sumDirectAmountForProject(projectId, organizationId);
         BigDecimal viaTodo = todoBudgetLinkRepository.sumViaTodoAmountForProject(projectId, organizationId);
@@ -171,13 +235,25 @@ public class ShiftBudgetSummaryService {
         return safeDirect.add(safeViaTodo);
     }
 
-    private void requireBudgetView(Long organizationId) {
+    /**
+     * {@code BUDGET_VIEW} 権限を要求しつつ、同時に {@code BUDGET_ADMIN} 保有も判定する。
+     *
+     * <p>Phase 9-δ 第3段クリーンカット: 権限階層は BUDGET_VIEW ⊂ BUDGET_ADMIN として扱う
+     * （V11.034 マイグレーションで BUDGET_ADMIN 保有者には自動付与済の前提）。
+     * ただし防衛的に SystemAdmin と BUDGET_ADMIN を独立判定し、いずれかがあれば true を返す。</p>
+     *
+     * @return {@code true} なら BUDGET_ADMIN 相当（by_user 実データを返してよい）
+     */
+    private boolean requireBudgetViewAndDetectAdmin(Long organizationId) {
         Long currentUserId = SecurityUtils.getCurrentUserId();
-        // TODO(F08.7 Phase 9-δ): BUDGET_ADMIN クリーンカット移行時に置換
-        if (!accessControlService.isSystemAdmin(currentUserId)
-                && !hasOrgPermission(currentUserId, organizationId, "BUDGET_VIEW")) {
+        if (accessControlService.isSystemAdmin(currentUserId)) {
+            return true;
+        }
+        boolean hasView = hasOrgPermission(currentUserId, organizationId, "BUDGET_VIEW");
+        if (!hasView) {
             throw new BusinessException(ShiftBudgetErrorCode.BUDGET_VIEW_REQUIRED);
         }
+        return hasOrgPermission(currentUserId, organizationId, "BUDGET_ADMIN");
     }
 
     private boolean hasOrgPermission(Long userId, Long organizationId, String permissionName) {
